[gd_scene load_steps=13 format=2]

[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Filter.tscn" type="PackedScene" id=2]
[ext_resource path="res://tres/tileSetAnimated.tres" type="TileSet" id=3]
[ext_resource path="res://sprites/scenes/Arcade.png" type="Texture" id=4]
[ext_resource path="res://sprites/scenes/NormalBackgroundSky.png" type="Texture" id=5]
[ext_resource path="res://sprites/scenes/NormalBackgroundTrees.png" type="Texture" id=6]
[ext_resource path="res://sprites/scenes/NormalBackgroundMountains.png" type="Texture" id=7]
[ext_resource path="res://scripts/MainArcade.gd" type="Script" id=8]
[ext_resource path="res://fonts/Kenney Pixel.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://scenes/enemies/Potatomous.tscn" type="PackedScene" id=10]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="DynamicFont" id=2]
size = 32
use_filter = true
font_data = ExtResource( 9 )

[node name="MainArcade" type="Node2D"]
script = ExtResource( 8 )
__meta__ = {
"_edit_vertical_guides_": [ -56.0, 240.0, 240.0 ]
}

[node name="BackgroundSprites" type="Node2D" parent="."]

[node name="BackgroundSky" type="Sprite" parent="BackgroundSprites"]
position = Vector2( 240, 88 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 5 )

[node name="BackgroundMountains" type="Sprite" parent="BackgroundSprites"]
position = Vector2( 240, 120 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 7 )

[node name="BackgroundTrees" type="Sprite" parent="BackgroundSprites"]
position = Vector2( 240, 120 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 6 )

[node name="NormalTileMap" type="TileMap" parent="."]
scale = Vector2( 0.5, 0.5 )
tile_set = ExtResource( 3 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
format = 1
tile_data = PoolIntArray( 1441800, 1, 0, 1441801, 1, 0, 1441802, 1, 0, 1441803, 1, 0, 1441804, 1, 0, 1441805, 1, 0, 1441806, 0, 0, 1441807, 1, 0, 1441808, 1, 0, 1441809, 1, 0, 1441810, 1, 0, 1441811, 1, 0, 1441812, 1, 0, 1441813, 1, 0, 1441814, 1, 0, 1441815, 1, 0, 1441816, 1, 0, 1441817, 1, 0, 1441818, 1, 0, 1441819, 1, 0, 1441820, 1, 0, 1441821, 1, 0, 1441822, 1, 0, 1441823, 1, 0, 1441824, 1, 0, 1441825, 1, 0, 1441826, 1, 0, 1441827, 1, 0, 1441828, 1, 0, 1441829, 1, 0, 1441830, 1, 0, 1441831, 1, 0, 1441832, 1, 0, 1441833, 1, 0, 1441834, 1, 0, 1441835, 1, 0, 1441836, 1, 0, 1441837, 2, 0, 1441838, 1, 0, 1441839, 1, 0, 1441840, 1, 0, 1441841, 1, 0, 1441842, 1, 0, 1441843, 1, 0, 1507342, 3, 0, 1507343, 9, 0, 1507344, 9, 0, 1507345, 9, 0, 1507346, 9, 0, 1507347, 9, 0, 1507348, 9, 0, 1507349, 9, 0, 1507350, 9, 0, 1507351, 9, 0, 1507352, 9, 0, 1507353, 9, 0, 1507354, 9, 0, 1507355, 9, 0, 1507356, 9, 0, 1507357, 9, 0, 1507358, 9, 0, 1507359, 9, 0, 1507360, 9, 0, 1507361, 9, 0, 1507362, 9, 0, 1507363, 9, 0, 1507364, 9, 0, 1507365, 9, 0, 1507366, 9, 0, 1507367, 9, 0, 1507368, 9, 0, 1507369, 9, 0, 1507370, 9, 0, 1507371, 9, 0, 1507372, 9, 0, 1507373, 5, 0, 1572878, 3, 0, 1572879, 9, 0, 1572880, 9, 0, 1572881, 9, 0, 1572882, 9, 0, 1572883, 9, 0, 1572884, 9, 0, 1572885, 9, 0, 1572886, 9, 0, 1572887, 9, 0, 1572888, 9, 0, 1572889, 9, 0, 1572890, 9, 0, 1572891, 9, 0, 1572892, 9, 0, 1572893, 9, 0, 1572894, 9, 0, 1572895, 9, 0, 1572896, 9, 0, 1572897, 9, 0, 1572898, 9, 0, 1572899, 9, 0, 1572900, 9, 0, 1572901, 9, 0, 1572902, 9, 0, 1572903, 9, 0, 1572904, 9, 0, 1572905, 9, 0, 1572906, 9, 0, 1572907, 9, 0, 1572908, 9, 0, 1572909, 5, 0, 1638414, 3, 0, 1638415, 9, 0, 1638416, 9, 0, 1638417, 9, 0, 1638418, 9, 0, 1638419, 9, 0, 1638420, 9, 0, 1638421, 9, 0, 1638422, 9, 0, 1638423, 9, 0, 1638424, 9, 0, 1638425, 9, 0, 1638426, 9, 0, 1638427, 9, 0, 1638428, 9, 0, 1638429, 9, 0, 1638430, 9, 0, 1638431, 9, 0, 1638432, 9, 0, 1638433, 9, 0, 1638434, 9, 0, 1638435, 9, 0, 1638436, 9, 0, 1638437, 9, 0, 1638438, 9, 0, 1638439, 9, 0, 1638440, 9, 0, 1638441, 9, 0, 1638442, 9, 0, 1638443, 9, 0, 1638444, 9, 0, 1638445, 5, 0, 1703950, 3, 0, 1703951, 9, 0, 1703952, 9, 0, 1703953, 9, 0, 1703954, 9, 0, 1703955, 9, 0, 1703956, 9, 0, 1703957, 9, 0, 1703958, 9, 0, 1703959, 9, 0, 1703960, 9, 0, 1703961, 9, 0, 1703962, 9, 0, 1703963, 9, 0, 1703964, 9, 0, 1703965, 9, 0, 1703966, 9, 0, 1703967, 9, 0, 1703968, 9, 0, 1703969, 9, 0, 1703970, 9, 0, 1703971, 9, 0, 1703972, 9, 0, 1703973, 9, 0, 1703974, 9, 0, 1703975, 9, 0, 1703976, 9, 0, 1703977, 9, 0, 1703978, 9, 0, 1703979, 9, 0, 1703980, 9, 0, 1703981, 5, 0, 1769486, 3, 0, 1769487, 9, 0, 1769488, 9, 0, 1769489, 9, 0, 1769490, 9, 0, 1769491, 9, 0, 1769492, 9, 0, 1769493, 9, 0, 1769494, 9, 0, 1769495, 9, 0, 1769496, 9, 0, 1769497, 9, 0, 1769498, 9, 0, 1769499, 9, 0, 1769500, 9, 0, 1769501, 9, 0, 1769502, 9, 0, 1769503, 9, 0, 1769504, 9, 0, 1769505, 9, 0, 1769506, 9, 0, 1769507, 9, 0, 1769508, 9, 0, 1769509, 9, 0, 1769510, 9, 0, 1769511, 9, 0, 1769512, 9, 0, 1769513, 9, 0, 1769514, 9, 0, 1769515, 9, 0, 1769516, 9, 0, 1769517, 5, 0, 1835022, 3, 0, 1835023, 9, 0, 1835024, 9, 0, 1835025, 9, 0, 1835026, 9, 0, 1835027, 9, 0, 1835028, 9, 0, 1835029, 9, 0, 1835030, 9, 0, 1835031, 9, 0, 1835032, 9, 0, 1835033, 9, 0, 1835034, 9, 0, 1835035, 9, 0, 1835036, 9, 0, 1835037, 9, 0, 1835038, 9, 0, 1835039, 9, 0, 1835040, 9, 0, 1835041, 9, 0, 1835042, 9, 0, 1835043, 9, 0, 1835044, 9, 0, 1835045, 9, 0, 1835046, 9, 0, 1835047, 9, 0, 1835048, 9, 0, 1835049, 9, 0, 1835050, 9, 0, 1835051, 9, 0, 1835052, 9, 0, 1835053, 5, 0, 1900558, 3, 0, 1900559, 9, 0, 1900560, 9, 0, 1900561, 9, 0, 1900562, 9, 0, 1900563, 9, 0, 1900564, 9, 0, 1900565, 9, 0, 1900566, 9, 0, 1900567, 9, 0, 1900568, 9, 0, 1900569, 9, 0, 1900570, 9, 0, 1900571, 9, 0, 1900572, 9, 0, 1900573, 9, 0, 1900574, 9, 0, 1900575, 9, 0, 1900576, 9, 0, 1900577, 9, 0, 1900578, 9, 0, 1900579, 9, 0, 1900580, 9, 0, 1900581, 9, 0, 1900582, 9, 0, 1900583, 9, 0, 1900584, 9, 0, 1900585, 9, 0, 1900586, 9, 0, 1900587, 9, 0, 1900588, 9, 0, 1900589, 5, 0, 1966094, 3, 0, 1966095, 9, 0, 1966096, 9, 0, 1966097, 9, 0, 1966098, 9, 0, 1966099, 9, 0, 1966100, 9, 0, 1966101, 9, 0, 1966102, 9, 0, 1966103, 9, 0, 1966104, 9, 0, 1966105, 9, 0, 1966106, 9, 0, 1966107, 9, 0, 1966108, 9, 0, 1966109, 9, 0, 1966110, 9, 0, 1966111, 9, 0, 1966112, 9, 0, 1966113, 9, 0, 1966114, 9, 0, 1966115, 9, 0, 1966116, 9, 0, 1966117, 9, 0, 1966118, 9, 0, 1966119, 9, 0, 1966120, 9, 0, 1966121, 9, 0, 1966122, 9, 0, 1966123, 9, 0, 1966124, 9, 0, 1966125, 5, 0, 2031630, 3, 0, 2031631, 9, 0, 2031632, 9, 0, 2031633, 9, 0, 2031634, 9, 0, 2031635, 9, 0, 2031636, 9, 0, 2031637, 9, 0, 2031638, 9, 0, 2031639, 9, 0, 2031640, 9, 0, 2031641, 9, 0, 2031642, 9, 0, 2031643, 9, 0, 2031644, 9, 0, 2031645, 9, 0, 2031646, 9, 0, 2031647, 9, 0, 2031648, 9, 0, 2031649, 9, 0, 2031650, 9, 0, 2031651, 9, 0, 2031652, 9, 0, 2031653, 9, 0, 2031654, 9, 0, 2031655, 9, 0, 2031656, 9, 0, 2031657, 9, 0, 2031658, 9, 0, 2031659, 9, 0, 2031660, 9, 0, 2031661, 5, 0 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 239, 168 )
scale = Vector2( 0.5, 0.5 )

[node name="Potatomous" parent="." instance=ExtResource( 10 )]
position = Vector2( 375, 171 )

[node name="ShurikenContainer" type="Node2D" parent="."]

[node name="Cabinet" type="Sprite" parent="."]
visible = false
position = Vector2( 240, 135 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 4 )

[node name="StartButton" type="Button" parent="."]
margin_left = 200.0
margin_top = 76.0
margin_right = 280.0
margin_bottom = 106.0
custom_styles/focus = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StarButtonLabel" type="Label" parent="StartButton"]
margin_left = 10.0
margin_top = 22.0
margin_right = 70.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_shadow = Color( 0.494118, 0.494118, 0.494118, 1 )
text = "START"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Filter" parent="." instance=ExtResource( 2 )]
margin_left = 112.0
margin_top = 15.0
margin_right = 368.0
margin_bottom = 255.0

[connection signal="pressed" from="StartButton" to="." method="_on_Start_pressed"]
